# WhisperAI-Transcribe

./: .replit  main.py  pyproject.toml  replit.nix
